fixed overlapping on resize

--- a/example/sass/main.scss
+++ b/example/sass/main.scss
@@ -16,10 +16,10 @@
 
 	.main-slide{
 		overflow: hidden;
-
-		&.active{
-			z-index: 1;
-		}
+		position: absolute;
+		top:0;
+		z-index: 1;
+		opacity: 0;
 	}
 
 /* -------------------------------------------
